unified_tests/functions/malformed_function_keyword_with_binding_in_body/expect/build.text.stderr
lib.copp:1:14: error: expected symbol
  functionTYPO run() -> nil {
               ^
